Use From in contrib to reference HoTT like an external library.

--- a/contrib/dune
+++ b/contrib/dune
@@ -1,4 +1,5 @@
 (coq.theory
  (name HoTT.Contrib)
  (package coq-hott)
- (flags -noinit -indices-matter -color on -R theories HoTT))
+ (flags -noinit -indices-matter -color on)
+ (theories HoTT))
